// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.delegatedui.api.integration.egress.airflow;

option java_multiple_files = true;
option java_package = "com.google.android.as.oss.delegatedui.api.integration.egress.airflow";

message AirflowEgressData {
  oneof events {
    PreparingDataEvent preparing_data_event = 1;
    DataReadyEvent data_ready_event = 2;
    ErrorEvent error_event = 3;
  }
}

// Event to notify the UI that data is coming.
message PreparingDataEvent {}

message DataReadyEvent {
  string data = 1;
}

message ErrorEvent {
  enum StatusCode {
    STATUS_CODE_UNSPECIFIED = 0;
    INTERNAL = 1;
    DEADLINE_EXCEEDED = 2;
  }
  StatusCode status_code = 1;
}
