// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2023";

package com.google.android.as.oss.delegatedui.api.integration.templates.airflow;

import "src/com/google/android/as/oss/delegatedui/api/integration/templates/ui_id_token.proto";

option java_package = "com.google.android.as.oss.delegatedui.api.integration.templates.airflow";
option java_multiple_files = true;

message AirflowTemplateData {
  // Decorative icon to be displayed in the UI.
  //
  // This will be sent through RPC metadata headers, and is only documented here
  // for the record.
  // Bitmap image = 0;

  // The text to display in the UI.
  string label = 1;

  // Token that uniquely identifies the UI element.
  UiIdToken ui_id_token = 2;
}
