// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

edition = "2024";

package com.google.android.as.oss.delegatedui.service.templates.airflow.data;

option java_outer_classname = "AirflowDataServiceOuterClass";
option java_package = "com.google.android.as.oss.delegatedui.service.templates.airflow.data";

service AirflowDataService {
  // Get data to be egressed from Airflow templates.
  rpc GetData(GetDataRequest) returns (GetDataResponse) {
    option deadline = 30.0;
  }
}

message GetDataRequest {}

message GetDataResponse {
  string data = 1;
}
